# europython-2025

./: .gitignore
core-api/: pyproject.toml
core-api/core_api/: main.py
core-api/core_api/db/: pool.py
core-api/core_api/models/: users.py
core-api/core_api/services/: user_service.py
e2e/: pyproject.toml
e2e/e2e/: create_user_test.py  create_user_through_kafka_test.py
user-admin/: package-lock.json  package.json
user-admin/app/: app.css
user-admin/app/components/: UsersList.tsx
user-admin/app/routes/: home.tsx
user-api/: pyproject.toml
user-api/user_api/: main.py
user-api/user_api/models/: users.py
user-api/user_api/services/: user_service.py
