[tool.poetry]
name = "core-api"
version = "0.1.0"
description = ""
authors = ["Vemund Santi <vemund@santi.no>"]
readme = "README.md"
packages = [{ include = "core_api" }]

[tool.poetry.dependencies]
python = "^3.13"
psycopg = "^3.2.9"
fastapi = "^0.116.1"
psycopg-pool = "^3.2.6"
hypercorn = "^0.17.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
pytest = "^8.4.1"
testcontainers = { extras = ["postgres"], version = "^4.10.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
