[tool.poetry]
name = "user-api"
version = "0.1.0"
description = ""
authors = ["Vemund Santi <vemund@santi.no>"]
readme = "README.md"
packages = [{ include = "user_api" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
hypercorn = "^0.17.3"
aiokafka = "^0.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
pytest = "^8.4.1"
testcontainers = { extras = ["kafka"], version = "^4.10.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
